server/parser.output
Terminaux inutilisés dans la grammaire

   FUNCTION
   FUNCTION_R
   FROM
   TO
   STEP
   IF
   THEN
   ELSE
   EOLR
   SYNTAX_ERROR


Grammaire

    0 $accept: line $end

    1 line: %empty
    2     | line type

    3 $@1: %empty

    4 type: VARIABLE '(' VARIABLE FEQU $@1 expr EOL
    5     | VARIABLE EQU expr EOL
    6     | expr EOL

    7 expr: '(' expr ')'
    8     | PI
    9     | EXP_E
   10     | TRUE
   11     | FALSE
   12     | PLS expr
   13     | MIN expr

   14 $@2: %empty

   15 expr: expr QM $@2 ternary
   16     | plot
   17     | numr
   18     | expr PLS expr
   19     | expr MIN expr
   20     | expr MUL expr
   21     | expr DIV expr
   22     | expr MOD expr
   23     | expr POW expr
   24     | expr FAC expr
   25     | expr LT expr
   26     | expr GT expr
   27     | expr LTE expr
   28     | expr GTE expr
   29     | expr EEQU expr
   30     | expr DIFF expr
   31     | expr AND expr
   32     | expr OR expr
   33     | SQRT '(' expr ')'
   34     | COS '(' expr ')'
   35     | SIN '(' expr ')'
   36     | TAN '(' expr ')'
   37     | LN '(' expr ')'
   38     | LOG '(' expr ')'
   39     | EXP '(' expr ')'
   40     | ABS '(' expr ')'
   41     | PRM '(' expr ')'
   42     | POWER '(' expr ',' expr ')'
   43     | error

   44 numr: NUMBER
   45     | VARIABLE
   46     | VARIABLE '(' expr ')'
   47     | VARIABLE '(' range ')'

   48 $@3: %empty

   49 ternary: expr $@3 DP expr

   50 plot: plot_decl

   51 plot_decl: PLOT '(' plot_func
   52          | UPDATE '(' VARIABLE ',' plot_func

   53 plot_func: VARIABLE ',' plot_func
   54          | VARIABLE ')'
   55          | VARIABLE plot_range

   56 plot_range: ',' range ')'

   57 range: range_from

   58 range_from: '[' expr range_to

   59 range_to: ',' expr range_step

   60 range_step: ']'
   61           | ',' expr ']'


Terminaux, suivis des règles où ils apparaissent

$end (0) 0
'(' (40) 4 7 33 34 35 36 37 38 39 40 41 42 46 47 51 52
')' (41) 7 33 34 35 36 37 38 39 40 41 42 46 47 54 56
',' (44) 42 52 53 56 59 61
'[' (91) 58
']' (93) 60 61
error (256) 43
NUMBER (258) 44
PI (259) 8
EXP_E (260) 9
VARIABLE (261) 4 5 45 46 47 52 53 54 55
FUNCTION (262)
FUNCTION_R (263)
FROM (264)
TO (265)
STEP (266)
IF (267)
THEN (268)
ELSE (269)
TRUE (270) 10
FALSE (271) 11
UPDATE (272) 52
PLOT (273) 51
SQRT (274) 33
SIN (275) 35
COS (276) 34
TAN (277) 36
LOG (278) 38
LN (279) 37
EXP (280) 39
ABS (281) 40
POWER (282) 42
PRM (283) 41
EOL (284) 4 5 6
EOLR (285)
SYNTAX_ERROR (286)
QM (287) 15
DP (288) 49
EQU (289) 5
FEQU (290) 4
PLS (291) 12 18
MIN (292) 13 19
MUL (293) 20
DIV (294) 21
MOD (295) 22
POW (296) 23
FAC (297) 24
SIGN (298)
LT (299) 25
GT (300) 26
GTE (301) 28
LTE (302) 27
EEQU (303) 29
DIFF (304) 30
AND (305) 31
OR (306) 32


Non-terminaux, suivis des règles où ils apparaissent

$accept (57)
    à gauche: 0
line (58)
    à gauche: 1 2, à droite: 0 2
type (59)
    à gauche: 4 5 6, à droite: 2
$@1 (60)
    à gauche: 3, à droite: 4
expr (61)
    à gauche: 7 8 9 10 11 12 13 15 16 17 18 19 20 21 22 23 24 25 26
    27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43, à droite:
    4 5 6 7 12 13 15 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33
    34 35 36 37 38 39 40 41 42 46 49 58 59 61
$@2 (62)
    à gauche: 14, à droite: 15
numr (63)
    à gauche: 44 45 46 47, à droite: 17
ternary (64)
    à gauche: 49, à droite: 15
$@3 (65)
    à gauche: 48, à droite: 49
plot (66)
    à gauche: 50, à droite: 16
plot_decl (67)
    à gauche: 51 52, à droite: 50
plot_func (68)
    à gauche: 53 54 55, à droite: 51 52 53
plot_range (69)
    à gauche: 56, à droite: 55
range (70)
    à gauche: 57, à droite: 47 56
range_from (71)
    à gauche: 58, à droite: 57
range_to (72)
    à gauche: 59, à droite: 58
range_step (73)
    à gauche: 60 61, à droite: 59


État 0

    0 $accept: . line $end

    $défaut  réduction par utilisation de la règle 1 (line)

    line  aller à l'état 1


État 1

    0 $accept: line . $end
    2 line: line . type

    $end      décalage et aller à l'état 2
    error     décalage et aller à l'état 3
    NUMBER    décalage et aller à l'état 4
    PI        décalage et aller à l'état 5
    EXP_E     décalage et aller à l'état 6
    VARIABLE  décalage et aller à l'état 7
    TRUE      décalage et aller à l'état 8
    FALSE     décalage et aller à l'état 9
    UPDATE    décalage et aller à l'état 10
    PLOT      décalage et aller à l'état 11
    SQRT      décalage et aller à l'état 12
    SIN       décalage et aller à l'état 13
    COS       décalage et aller à l'état 14
    TAN       décalage et aller à l'état 15
    LOG       décalage et aller à l'état 16
    LN        décalage et aller à l'état 17
    EXP       décalage et aller à l'état 18
    ABS       décalage et aller à l'état 19
    POWER     décalage et aller à l'état 20
    PRM       décalage et aller à l'état 21
    PLS       décalage et aller à l'état 22
    MIN       décalage et aller à l'état 23
    '('       décalage et aller à l'état 24

    type       aller à l'état 25
    expr       aller à l'état 26
    numr       aller à l'état 27
    plot       aller à l'état 28
    plot_decl  aller à l'état 29


État 2

    0 $accept: line $end .

    $défaut  accepter


État 3

   43 expr: error .

    $défaut  réduction par utilisation de la règle 43 (expr)


État 4

   44 numr: NUMBER .

    $défaut  réduction par utilisation de la règle 44 (numr)


État 5

    8 expr: PI .

    $défaut  réduction par utilisation de la règle 8 (expr)


État 6

    9 expr: EXP_E .

    $défaut  réduction par utilisation de la règle 9 (expr)


État 7

    4 type: VARIABLE . '(' VARIABLE FEQU $@1 expr EOL
    5     | VARIABLE . EQU expr EOL
   45 numr: VARIABLE .
   46     | VARIABLE . '(' expr ')'
   47     | VARIABLE . '(' range ')'

    EQU  décalage et aller à l'état 30
    '('  décalage et aller à l'état 31

    $défaut  réduction par utilisation de la règle 45 (numr)


État 8

   10 expr: TRUE .

    $défaut  réduction par utilisation de la règle 10 (expr)


État 9

   11 expr: FALSE .

    $défaut  réduction par utilisation de la règle 11 (expr)


État 10

   52 plot_decl: UPDATE . '(' VARIABLE ',' plot_func

    '('  décalage et aller à l'état 32


État 11

   51 plot_decl: PLOT . '(' plot_func

    '('  décalage et aller à l'état 33


État 12

   33 expr: SQRT . '(' expr ')'

    '('  décalage et aller à l'état 34


État 13

   35 expr: SIN . '(' expr ')'

    '('  décalage et aller à l'état 35


État 14

   34 expr: COS . '(' expr ')'

    '('  décalage et aller à l'état 36


État 15

   36 expr: TAN . '(' expr ')'

    '('  décalage et aller à l'état 37


État 16

   38 expr: LOG . '(' expr ')'

    '('  décalage et aller à l'état 38


État 17

   37 expr: LN . '(' expr ')'

    '('  décalage et aller à l'état 39


État 18

   39 expr: EXP . '(' expr ')'

    '('  décalage et aller à l'état 40


État 19

   40 expr: ABS . '(' expr ')'

    '('  décalage et aller à l'état 41


État 20

   42 expr: POWER . '(' expr ',' expr ')'

    '('  décalage et aller à l'état 42


État 21

   41 expr: PRM . '(' expr ')'

    '('  décalage et aller à l'état 43


État 22

   12 expr: PLS . expr

    error     décalage et aller à l'état 3
    NUMBER    décalage et aller à l'état 4
    PI        décalage et aller à l'état 5
    EXP_E     décalage et aller à l'état 6
    VARIABLE  décalage et aller à l'état 44
    TRUE      décalage et aller à l'état 8
    FALSE     décalage et aller à l'état 9
    UPDATE    décalage et aller à l'état 10
    PLOT      décalage et aller à l'état 11
    SQRT      décalage et aller à l'état 12
    SIN       décalage et aller à l'état 13
    COS       décalage et aller à l'état 14
    TAN       décalage et aller à l'état 15
    LOG       décalage et aller à l'état 16
    LN        décalage et aller à l'état 17
    EXP       décalage et aller à l'état 18
    ABS       décalage et aller à l'état 19
    POWER     décalage et aller à l'état 20
    PRM       décalage et aller à l'état 21
    PLS       décalage et aller à l'état 22
    MIN       décalage et aller à l'état 23
    '('       décalage et aller à l'état 24

    expr       aller à l'état 45
    numr       aller à l'état 27
    plot       aller à l'état 28
    plot_decl  aller à l'état 29


État 23

   13 expr: MIN . expr

    error     décalage et aller à l'état 3
    NUMBER    décalage et aller à l'état 4
    PI        décalage et aller à l'état 5
    EXP_E     décalage et aller à l'état 6
    VARIABLE  décalage et aller à l'état 44
    TRUE      décalage et aller à l'état 8
    FALSE     décalage et aller à l'état 9
    UPDATE    décalage et aller à l'état 10
    PLOT      décalage et aller à l'état 11
    SQRT      décalage et aller à l'état 12
    SIN       décalage et aller à l'état 13
    COS       décalage et aller à l'état 14
    TAN       décalage et aller à l'état 15
    LOG       décalage et aller à l'état 16
    LN        décalage et aller à l'état 17
    EXP       décalage et aller à l'état 18
    ABS       décalage et aller à l'état 19
    POWER     décalage et aller à l'état 20
    PRM       décalage et aller à l'état 21
    PLS       décalage et aller à l'état 22
    MIN       décalage et aller à l'état 23
    '('       décalage et aller à l'état 24

    expr       aller à l'état 46
    numr       aller à l'état 27
    plot       aller à l'état 28
    plot_decl  aller à l'état 29


État 24

    7 expr: '(' . expr ')'

    error     décalage et aller à l'état 3
    NUMBER    décalage et aller à l'état 4
    PI        décalage et aller à l'état 5
    EXP_E     décalage et aller à l'état 6
    VARIABLE  décalage et aller à l'état 44
    TRUE      décalage et aller à l'état 8
    FALSE     décalage et aller à l'état 9
    UPDATE    décalage et aller à l'état 10
    PLOT      décalage et aller à l'état 11
    SQRT      décalage et aller à l'état 12
    SIN       décalage et aller à l'état 13
    COS       décalage et aller à l'état 14
    TAN       décalage et aller à l'état 15
    LOG       décalage et aller à l'état 16
    LN        décalage et aller à l'état 17
    EXP       décalage et aller à l'état 18
    ABS       décalage et aller à l'état 19
    POWER     décalage et aller à l'état 20
    PRM       décalage et aller à l'état 21
    PLS       décalage et aller à l'état 22
    MIN       décalage et aller à l'état 23
    '('       décalage et aller à l'état 24

    expr       aller à l'état 47
    numr       aller à l'état 27
    plot       aller à l'état 28
    plot_decl  aller à l'état 29


État 25

    2 line: line type .

    $défaut  réduction par utilisation de la règle 2 (line)


État 26

    6 type: expr . EOL
   15 expr: expr . QM $@2 ternary
   18     | expr . PLS expr
   19     | expr . MIN expr
   20     | expr . MUL expr
   21     | expr . DIV expr
   22     | expr . MOD expr
   23     | expr . POW expr
   24     | expr . FAC expr
   25     | expr . LT expr
   26     | expr . GT expr
   27     | expr . LTE expr
   28     | expr . GTE expr
   29     | expr . EEQU expr
   30     | expr . DIFF expr
   31     | expr . AND expr
   32     | expr . OR expr

    EOL   décalage et aller à l'état 48
    QM    décalage et aller à l'état 49
    PLS   décalage et aller à l'état 50
    MIN   décalage et aller à l'état 51
    MUL   décalage et aller à l'état 52
    DIV   décalage et aller à l'état 53
    MOD   décalage et aller à l'état 54
    POW   décalage et aller à l'état 55
    FAC   décalage et aller à l'état 56
    LT    décalage et aller à l'état 57
    GT    décalage et aller à l'état 58
    GTE   décalage et aller à l'état 59
    LTE   décalage et aller à l'état 60
    EEQU  décalage et aller à l'état 61
    DIFF  décalage et aller à l'état 62
    AND   décalage et aller à l'état 63
    OR    décalage et aller à l'état 64


État 27

   17 expr: numr .

    $défaut  réduction par utilisation de la règle 17 (expr)


État 28

   16 expr: plot .

    $défaut  réduction par utilisation de la règle 16 (expr)


État 29

   50 plot: plot_decl .

    $défaut  réduction par utilisation de la règle 50 (plot)


État 30

    5 type: VARIABLE EQU . expr EOL

    error     décalage et aller à l'état 3
    NUMBER    décalage et aller à l'état 4
    PI        décalage et aller à l'état 5
    EXP_E     décalage et aller à l'état 6
    VARIABLE  décalage et aller à l'état 44
    TRUE      décalage et aller à l'état 8
    FALSE     décalage et aller à l'état 9
    UPDATE    décalage et aller à l'état 10
    PLOT      décalage et aller à l'état 11
    SQRT      décalage et aller à l'état 12
    SIN       décalage et aller à l'état 13
    COS       décalage et aller à l'état 14
    TAN       décalage et aller à l'état 15
    LOG       décalage et aller à l'état 16
    LN        décalage et aller à l'état 17
    EXP       décalage et aller à l'état 18
    ABS       décalage et aller à l'état 19
    POWER     décalage et aller à l'état 20
    PRM       décalage et aller à l'état 21
    PLS       décalage et aller à l'état 22
    MIN       décalage et aller à l'état 23
    '('       décalage et aller à l'état 24

    expr       aller à l'état 65
    numr       aller à l'état 27
    plot       aller à l'état 28
    plot_decl  aller à l'état 29


État 31

    4 type: VARIABLE '(' . VARIABLE FEQU $@1 expr EOL
   46 numr: VARIABLE '(' . expr ')'
   47     | VARIABLE '(' . range ')'

    error     décalage et aller à l'état 3
    NUMBER    décalage et aller à l'état 4
    PI        décalage et aller à l'état 5
    EXP_E     décalage et aller à l'état 6
    VARIABLE  décalage et aller à l'état 66
    TRUE      décalage et aller à l'état 8
    FALSE     décalage et aller à l'état 9
    UPDATE    décalage et aller à l'état 10
    PLOT      décalage et aller à l'état 11
    SQRT      décalage et aller à l'état 12
    SIN       décalage et aller à l'état 13
    COS       décalage et aller à l'état 14
    TAN       décalage et aller à l'état 15
    LOG       décalage et aller à l'état 16
    LN        décalage et aller à l'état 17
    EXP       décalage et aller à l'état 18
    ABS       décalage et aller à l'état 19
    POWER     décalage et aller à l'état 20
    PRM       décalage et aller à l'état 21
    PLS       décalage et aller à l'état 22
    MIN       décalage et aller à l'état 23
    '('       décalage et aller à l'état 24
    '['       décalage et aller à l'état 67

    expr        aller à l'état 68
    numr        aller à l'état 27
    plot        aller à l'état 28
    plot_decl   aller à l'état 29
    range       aller à l'état 69
    range_from  aller à l'état 70


État 32

   52 plot_decl: UPDATE '(' . VARIABLE ',' plot_func

    VARIABLE  décalage et aller à l'état 71


État 33

   51 plot_decl: PLOT '(' . plot_func

    VARIABLE  décalage et aller à l'état 72

    plot_func  aller à l'état 73


État 34

   33 expr: SQRT '(' . expr ')'

    error     décalage et aller à l'état 3
    NUMBER    décalage et aller à l'état 4
    PI        décalage et aller à l'état 5
    EXP_E     décalage et aller à l'état 6
    VARIABLE  décalage et aller à l'état 44
    TRUE      décalage et aller à l'état 8
    FALSE     décalage et aller à l'état 9
    UPDATE    décalage et aller à l'état 10
    PLOT      décalage et aller à l'état 11
    SQRT      décalage et aller à l'état 12
    SIN       décalage et aller à l'état 13
    COS       décalage et aller à l'état 14
    TAN       décalage et aller à l'état 15
    LOG       décalage et aller à l'état 16
    LN        décalage et aller à l'état 17
    EXP       décalage et aller à l'état 18
    ABS       décalage et aller à l'état 19
    POWER     décalage et aller à l'état 20
    PRM       décalage et aller à l'état 21
    PLS       décalage et aller à l'état 22
    MIN       décalage et aller à l'état 23
    '('       décalage et aller à l'état 24

    expr       aller à l'état 74
    numr       aller à l'état 27
    plot       aller à l'état 28
    plot_decl  aller à l'état 29


État 35

   35 expr: SIN '(' . expr ')'

    error     décalage et aller à l'état 3
    NUMBER    décalage et aller à l'état 4
    PI        décalage et aller à l'état 5
    EXP_E     décalage et aller à l'état 6
    VARIABLE  décalage et aller à l'état 44
    TRUE      décalage et aller à l'état 8
    FALSE     décalage et aller à l'état 9
    UPDATE    décalage et aller à l'état 10
    PLOT      décalage et aller à l'état 11
    SQRT      décalage et aller à l'état 12
    SIN       décalage et aller à l'état 13
    COS       décalage et aller à l'état 14
    TAN       décalage et aller à l'état 15
    LOG       décalage et aller à l'état 16
    LN        décalage et aller à l'état 17
    EXP       décalage et aller à l'état 18
    ABS       décalage et aller à l'état 19
    POWER     décalage et aller à l'état 20
    PRM       décalage et aller à l'état 21
    PLS       décalage et aller à l'état 22
    MIN       décalage et aller à l'état 23
    '('       décalage et aller à l'état 24

    expr       aller à l'état 75
    numr       aller à l'état 27
    plot       aller à l'état 28
    plot_decl  aller à l'état 29


État 36

   34 expr: COS '(' . expr ')'

    error     décalage et aller à l'état 3
    NUMBER    décalage et aller à l'état 4
    PI        décalage et aller à l'état 5
    EXP_E     décalage et aller à l'état 6
    VARIABLE  décalage et aller à l'état 44
    TRUE      décalage et aller à l'état 8
    FALSE     décalage et aller à l'état 9
    UPDATE    décalage et aller à l'état 10
    PLOT      décalage et aller à l'état 11
    SQRT      décalage et aller à l'état 12
    SIN       décalage et aller à l'état 13
    COS       décalage et aller à l'état 14
    TAN       décalage et aller à l'état 15
    LOG       décalage et aller à l'état 16
    LN        décalage et aller à l'état 17
    EXP       décalage et aller à l'état 18
    ABS       décalage et aller à l'état 19
    POWER     décalage et aller à l'état 20
    PRM       décalage et aller à l'état 21
    PLS       décalage et aller à l'état 22
    MIN       décalage et aller à l'état 23
    '('       décalage et aller à l'état 24

    expr       aller à l'état 76
    numr       aller à l'état 27
    plot       aller à l'état 28
    plot_decl  aller à l'état 29


État 37

   36 expr: TAN '(' . expr ')'

    error     décalage et aller à l'état 3
    NUMBER    décalage et aller à l'état 4
    PI        décalage et aller à l'état 5
    EXP_E     décalage et aller à l'état 6
    VARIABLE  décalage et aller à l'état 44
    TRUE      décalage et aller à l'état 8
    FALSE     décalage et aller à l'état 9
    UPDATE    décalage et aller à l'état 10
    PLOT      décalage et aller à l'état 11
    SQRT      décalage et aller à l'état 12
    SIN       décalage et aller à l'état 13
    COS       décalage et aller à l'état 14
    TAN       décalage et aller à l'état 15
    LOG       décalage et aller à l'état 16
    LN        décalage et aller à l'état 17
    EXP       décalage et aller à l'état 18
    ABS       décalage et aller à l'état 19
    POWER     décalage et aller à l'état 20
    PRM       décalage et aller à l'état 21
    PLS       décalage et aller à l'état 22
    MIN       décalage et aller à l'état 23
    '('       décalage et aller à l'état 24

    expr       aller à l'état 77
    numr       aller à l'état 27
    plot       aller à l'état 28
    plot_decl  aller à l'état 29


État 38

   38 expr: LOG '(' . expr ')'

    error     décalage et aller à l'état 3
    NUMBER    décalage et aller à l'état 4
    PI        décalage et aller à l'état 5
    EXP_E     décalage et aller à l'état 6
    VARIABLE  décalage et aller à l'état 44
    TRUE      décalage et aller à l'état 8
    FALSE     décalage et aller à l'état 9
    UPDATE    décalage et aller à l'état 10
    PLOT      décalage et aller à l'état 11
    SQRT      décalage et aller à l'état 12
    SIN       décalage et aller à l'état 13
    COS       décalage et aller à l'état 14
    TAN       décalage et aller à l'état 15
    LOG       décalage et aller à l'état 16
    LN        décalage et aller à l'état 17
    EXP       décalage et aller à l'état 18
    ABS       décalage et aller à l'état 19
    POWER     décalage et aller à l'état 20
    PRM       décalage et aller à l'état 21
    PLS       décalage et aller à l'état 22
    MIN       décalage et aller à l'état 23
    '('       décalage et aller à l'état 24

    expr       aller à l'état 78
    numr       aller à l'état 27
    plot       aller à l'état 28
    plot_decl  aller à l'état 29


État 39

   37 expr: LN '(' . expr ')'

    error     décalage et aller à l'état 3
    NUMBER    décalage et aller à l'état 4
    PI        décalage et aller à l'état 5
    EXP_E     décalage et aller à l'état 6
    VARIABLE  décalage et aller à l'état 44
    TRUE      décalage et aller à l'état 8
    FALSE     décalage et aller à l'état 9
    UPDATE    décalage et aller à l'état 10
    PLOT      décalage et aller à l'état 11
    SQRT      décalage et aller à l'état 12
    SIN       décalage et aller à l'état 13
    COS       décalage et aller à l'état 14
    TAN       décalage et aller à l'état 15
    LOG       décalage et aller à l'état 16
    LN        décalage et aller à l'état 17
    EXP       décalage et aller à l'état 18
    ABS       décalage et aller à l'état 19
    POWER     décalage et aller à l'état 20
    PRM       décalage et aller à l'état 21
    PLS       décalage et aller à l'état 22
    MIN       décalage et aller à l'état 23
    '('       décalage et aller à l'état 24

    expr       aller à l'état 79
    numr       aller à l'état 27
    plot       aller à l'état 28
    plot_decl  aller à l'état 29


État 40

   39 expr: EXP '(' . expr ')'

    error     décalage et aller à l'état 3
    NUMBER    décalage et aller à l'état 4
    PI        décalage et aller à l'état 5
    EXP_E     décalage et aller à l'état 6
    VARIABLE  décalage et aller à l'état 44
    TRUE      décalage et aller à l'état 8
    FALSE     décalage et aller à l'état 9
    UPDATE    décalage et aller à l'état 10
    PLOT      décalage et aller à l'état 11
    SQRT      décalage et aller à l'état 12
    SIN       décalage et aller à l'état 13
    COS       décalage et aller à l'état 14
    TAN       décalage et aller à l'état 15
    LOG       décalage et aller à l'état 16
    LN        décalage et aller à l'état 17
    EXP       décalage et aller à l'état 18
    ABS       décalage et aller à l'état 19
    POWER     décalage et aller à l'état 20
    PRM       décalage et aller à l'état 21
    PLS       décalage et aller à l'état 22
    MIN       décalage et aller à l'état 23
    '('       décalage et aller à l'état 24

    expr       aller à l'état 80
    numr       aller à l'état 27
    plot       aller à l'état 28
    plot_decl  aller à l'état 29


État 41

   40 expr: ABS '(' . expr ')'

    error     décalage et aller à l'état 3
    NUMBER    décalage et aller à l'état 4
    PI        décalage et aller à l'état 5
    EXP_E     décalage et aller à l'état 6
    VARIABLE  décalage et aller à l'état 44
    TRUE      décalage et aller à l'état 8
    FALSE     décalage et aller à l'état 9
    UPDATE    décalage et aller à l'état 10
    PLOT      décalage et aller à l'état 11
    SQRT      décalage et aller à l'état 12
    SIN       décalage et aller à l'état 13
    COS       décalage et aller à l'état 14
    TAN       décalage et aller à l'état 15
    LOG       décalage et aller à l'état 16
    LN        décalage et aller à l'état 17
    EXP       décalage et aller à l'état 18
    ABS       décalage et aller à l'état 19
    POWER     décalage et aller à l'état 20
    PRM       décalage et aller à l'état 21
    PLS       décalage et aller à l'état 22
    MIN       décalage et aller à l'état 23
    '('       décalage et aller à l'état 24

    expr       aller à l'état 81
    numr       aller à l'état 27
    plot       aller à l'état 28
    plot_decl  aller à l'état 29


État 42

   42 expr: POWER '(' . expr ',' expr ')'

    error     décalage et aller à l'état 3
    NUMBER    décalage et aller à l'état 4
    PI        décalage et aller à l'état 5
    EXP_E     décalage et aller à l'état 6
    VARIABLE  décalage et aller à l'état 44
    TRUE      décalage et aller à l'état 8
    FALSE     décalage et aller à l'état 9
    UPDATE    décalage et aller à l'état 10
    PLOT      décalage et aller à l'état 11
    SQRT      décalage et aller à l'état 12
    SIN       décalage et aller à l'état 13
    COS       décalage et aller à l'état 14
    TAN       décalage et aller à l'état 15
    LOG       décalage et aller à l'état 16
    LN        décalage et aller à l'état 17
    EXP       décalage et aller à l'état 18
    ABS       décalage et aller à l'état 19
    POWER     décalage et aller à l'état 20
    PRM       décalage et aller à l'état 21
    PLS       décalage et aller à l'état 22
    MIN       décalage et aller à l'état 23
    '('       décalage et aller à l'état 24

    expr       aller à l'état 82
    numr       aller à l'état 27
    plot       aller à l'état 28
    plot_decl  aller à l'état 29


État 43

   41 expr: PRM '(' . expr ')'

    error     décalage et aller à l'état 3
    NUMBER    décalage et aller à l'état 4
    PI        décalage et aller à l'état 5
    EXP_E     décalage et aller à l'état 6
    VARIABLE  décalage et aller à l'état 44
    TRUE      décalage et aller à l'état 8
    FALSE     décalage et aller à l'état 9
    UPDATE    décalage et aller à l'état 10
    PLOT      décalage et aller à l'état 11
    SQRT      décalage et aller à l'état 12
    SIN       décalage et aller à l'état 13
    COS       décalage et aller à l'état 14
    TAN       décalage et aller à l'état 15
    LOG       décalage et aller à l'état 16
    LN        décalage et aller à l'état 17
    EXP       décalage et aller à l'état 18
    ABS       décalage et aller à l'état 19
    POWER     décalage et aller à l'état 20
    PRM       décalage et aller à l'état 21
    PLS       décalage et aller à l'état 22
    MIN       décalage et aller à l'état 23
    '('       décalage et aller à l'état 24

    expr       aller à l'état 83
    numr       aller à l'état 27
    plot       aller à l'état 28
    plot_decl  aller à l'état 29


État 44

   45 numr: VARIABLE .
   46     | VARIABLE . '(' expr ')'
   47     | VARIABLE . '(' range ')'

    '('  décalage et aller à l'état 84

    $défaut  réduction par utilisation de la règle 45 (numr)


État 45

   12 expr: PLS expr .
   15     | expr . QM $@2 ternary
   18     | expr . PLS expr
   19     | expr . MIN expr
   20     | expr . MUL expr
   21     | expr . DIV expr
   22     | expr . MOD expr
   23     | expr . POW expr
   24     | expr . FAC expr
   25     | expr . LT expr
   26     | expr . GT expr
   27     | expr . LTE expr
   28     | expr . GTE expr
   29     | expr . EEQU expr
   30     | expr . DIFF expr
   31     | expr . AND expr
   32     | expr . OR expr

    LT    décalage et aller à l'état 57
    GT    décalage et aller à l'état 58
    GTE   décalage et aller à l'état 59
    LTE   décalage et aller à l'état 60
    EEQU  décalage et aller à l'état 61
    DIFF  décalage et aller à l'état 62
    AND   décalage et aller à l'état 63
    OR    décalage et aller à l'état 64

    $défaut  réduction par utilisation de la règle 12 (expr)


État 46

   13 expr: MIN expr .
   15     | expr . QM $@2 ternary
   18     | expr . PLS expr
   19     | expr . MIN expr
   20     | expr . MUL expr
   21     | expr . DIV expr
   22     | expr . MOD expr
   23     | expr . POW expr
   24     | expr . FAC expr
   25     | expr . LT expr
   26     | expr . GT expr
   27     | expr . LTE expr
   28     | expr . GTE expr
   29     | expr . EEQU expr
   30     | expr . DIFF expr
   31     | expr . AND expr
   32     | expr . OR expr

    LT    décalage et aller à l'état 57
    GT    décalage et aller à l'état 58
    GTE   décalage et aller à l'état 59
    LTE   décalage et aller à l'état 60
    EEQU  décalage et aller à l'état 61
    DIFF  décalage et aller à l'état 62
    AND   décalage et aller à l'état 63
    OR    décalage et aller à l'état 64

    $défaut  réduction par utilisation de la règle 13 (expr)


État 47

    7 expr: '(' expr . ')'
   15     | expr . QM $@2 ternary
   18     | expr . PLS expr
   19     | expr . MIN expr
   20     | expr . MUL expr
   21     | expr . DIV expr
   22     | expr . MOD expr
   23     | expr . POW expr
   24     | expr . FAC expr
   25     | expr . LT expr
   26     | expr . GT expr
   27     | expr . LTE expr
   28     | expr . GTE expr
   29     | expr . EEQU expr
   30     | expr . DIFF expr
   31     | expr . AND expr
   32     | expr . OR expr

    QM    décalage et aller à l'état 49
    PLS   décalage et aller à l'état 50
    MIN   décalage et aller à l'état 51
    MUL   décalage et aller à l'état 52
    DIV   décalage et aller à l'état 53
    MOD   décalage et aller à l'état 54
    POW   décalage et aller à l'état 55
    FAC   décalage et aller à l'état 56
    LT    décalage et aller à l'état 57
    GT    décalage et aller à l'état 58
    GTE   décalage et aller à l'état 59
    LTE   décalage et aller à l'état 60
    EEQU  décalage et aller à l'état 61
    DIFF  décalage et aller à l'état 62
    AND   décalage et aller à l'état 63
    OR    décalage et aller à l'état 64
    ')'   décalage et aller à l'état 85


État 48

    6 type: expr EOL .

    $défaut  réduction par utilisation de la règle 6 (type)


État 49

   15 expr: expr QM . $@2 ternary

    $défaut  réduction par utilisation de la règle 14 ($@2)

    $@2  aller à l'état 86


État 50

   18 expr: expr PLS . expr

    error     décalage et aller à l'état 3
    NUMBER    décalage et aller à l'état 4
    PI        décalage et aller à l'état 5
    EXP_E     décalage et aller à l'état 6
    VARIABLE  décalage et aller à l'état 44
    TRUE      décalage et aller à l'état 8
    FALSE     décalage et aller à l'état 9
    UPDATE    décalage et aller à l'état 10
    PLOT      décalage et aller à l'état 11
    SQRT      décalage et aller à l'état 12
    SIN       décalage et aller à l'état 13
    COS       décalage et aller à l'état 14
    TAN       décalage et aller à l'état 15
    LOG       décalage et aller à l'état 16
    LN        décalage et aller à l'état 17
    EXP       décalage et aller à l'état 18
    ABS       décalage et aller à l'état 19
    POWER     décalage et aller à l'état 20
    PRM       décalage et aller à l'état 21
    PLS       décalage et aller à l'état 22
    MIN       décalage et aller à l'état 23
    '('       décalage et aller à l'état 24

    expr       aller à l'état 87
    numr       aller à l'état 27
    plot       aller à l'état 28
    plot_decl  aller à l'état 29


État 51

   19 expr: expr MIN . expr

    error     décalage et aller à l'état 3
    NUMBER    décalage et aller à l'état 4
    PI        décalage et aller à l'état 5
    EXP_E     décalage et aller à l'état 6
    VARIABLE  décalage et aller à l'état 44
    TRUE      décalage et aller à l'état 8
    FALSE     décalage et aller à l'état 9
    UPDATE    décalage et aller à l'état 10
    PLOT      décalage et aller à l'état 11
    SQRT      décalage et aller à l'état 12
    SIN       décalage et aller à l'état 13
    COS       décalage et aller à l'état 14
    TAN       décalage et aller à l'état 15
    LOG       décalage et aller à l'état 16
    LN        décalage et aller à l'état 17
    EXP       décalage et aller à l'état 18
    ABS       décalage et aller à l'état 19
    POWER     décalage et aller à l'état 20
    PRM       décalage et aller à l'état 21
    PLS       décalage et aller à l'état 22
    MIN       décalage et aller à l'état 23
    '('       décalage et aller à l'état 24

    expr       aller à l'état 88
    numr       aller à l'état 27
    plot       aller à l'état 28
    plot_decl  aller à l'état 29


État 52

   20 expr: expr MUL . expr

    error     décalage et aller à l'état 3
    NUMBER    décalage et aller à l'état 4
    PI        décalage et aller à l'état 5
    EXP_E     décalage et aller à l'état 6
    VARIABLE  décalage et aller à l'état 44
    TRUE      décalage et aller à l'état 8
    FALSE     décalage et aller à l'état 9
    UPDATE    décalage et aller à l'état 10
    PLOT      décalage et aller à l'état 11
    SQRT      décalage et aller à l'état 12
    SIN       décalage et aller à l'état 13
    COS       décalage et aller à l'état 14
    TAN       décalage et aller à l'état 15
    LOG       décalage et aller à l'état 16
    LN        décalage et aller à l'état 17
    EXP       décalage et aller à l'état 18
    ABS       décalage et aller à l'état 19
    POWER     décalage et aller à l'état 20
    PRM       décalage et aller à l'état 21
    PLS       décalage et aller à l'état 22
    MIN       décalage et aller à l'état 23
    '('       décalage et aller à l'état 24

    expr       aller à l'état 89
    numr       aller à l'état 27
    plot       aller à l'état 28
    plot_decl  aller à l'état 29


État 53

   21 expr: expr DIV . expr
